--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -39,5 +39,11 @@
     "noAccountYet": "No account yet?",
     "requiredField": "This field is required",
     "invalidFormat": "Invalid format"
+  },
+  "search": {
+    "search": "Search"
+  },
+  "home": {
+    "home": "Home"
   }
 }
