fix(translates files): add sections

--- a/src/locales/languages/ar.json
+++ b/src/locales/languages/ar.json
@@ -1,37 +1,43 @@
 {
-  "plus": "أكثر",
-  "sansa": "سانسا",
-  "SANSACestQuoi": "سانسا ما هذا؟",
-  "sansaReferenceLesLieuxEtServices": "إنها المنصة التي تشير إلى الأماكن والخدمات المفيدة للأشخاص الذين يواجهون صعوبات.",
-  "seConnecter": "تسجيل الدخول",
-  "sInscrire": "يسجل",
-  "seDeconnecter": "تسجيل خروج",
-  "nouvelleNote": "ملاحظة جديدة",
-  "coffreFortNumerique": "خزنة رقمية",
-  "mesLieuxFavoris": "أماكني المفضلة",
-  "bonjourName": "مرحبا {{ name }} !",
-  "sesMissions": "مهامها",
-  "missionsPrompt1": "إحالة جميع الأشخاص في المواقف الصعبة إلى الهياكل التي يمكن أن تساعدهم.",
-  "missionsPrompt2": "لتوفير أداة مفتوحة للجميع ومريحة وبسيطة وسريعة الاستخدام.",
-  "missionsPrompt3": "وفر الوصول إلى مساحة خاصة تحتوي على خزنة رقمية وقائمة بأماكنك المفضلة.",
-  "nousContacter": "اتصل بنا",
-  "langues": "اللغات",
-  "politiqueDeConfidentialite": "سياسة الخصوصية",
-  "mentionsLegales": "قانوني",
-  "cgu": "CGU",
-  "consulterLaListe": "استشر القائمة",
-  "aidesAdministratives": "المساعدة الإدارية",
-  "jAiLuEtJaccepte": "لقد قرأت وقبلت شروط الاستخدام العامة",
-  "vousAvezDejaUnCompte": "هل لديك حساب بالفعل؟",
-  "identifiant": "المعرف",
-  "adresseMail": "عنوان البريد الالكترونى",
-  "telephone": "هاتف",
-  "motDePasse": "كلمة المرور",
-  "motDePasseCaracteresPrompt": "يجب أن يحتوي على 8 أحرف مع حرف واحد كبير ورقم واحد",
-  "votreEmailOuIdentifiant": "بريدك الإلكتروني أو تسجيل الدخول",
-  "votreMotDePasse": "كلمة السر خاصتك",
-  "pasEncoreDeCompte": "لا يوجد حساب بعد؟",
-  "champsRequis": "هذه الخانة مطلوبه",
-  "formatInvalide": "تنسيق غير صالح",
-  "motDePasseOublie": "نسيت رقمك السري؟"
+  "common": {
+    "sansa": "سانسا",
+    "sInscrire": "يسجل",
+    "seConnecter": "تسجيل الدخول",
+    "seDeconnecter": "تسجيل خروج"
+  },
+  "plus": {
+    "plus": "أكثر",
+    "SANSACestQuoi": "سانسا ما هذا؟",
+    "sansaReferenceLesLieuxEtServices": "إنها المنصة التي تشير إلى الأماكن والخدمات المفيدة للأشخاص الذين يواجهون صعوبات.",
+    "nouvelleNote": "ملاحظة جديدة",
+    "coffreFortNumerique": "خزنة رقمية",
+    "mesLieuxFavoris": "أماكني المفضلة",
+    "bonjourName": "مرحبا {{ name }} !",
+    "sesMissions": "مهامها",
+    "missionsPrompt1": "إحالة جميع الأشخاص في المواقف الصعبة إلى الهياكل التي يمكن أن تساعدهم.",
+    "missionsPrompt2": "لتوفير أداة مفتوحة للجميع ومريحة وبسيطة وسريعة الاستخدام.",
+    "missionsPrompt3": "وفر الوصول إلى مساحة خاصة تحتوي على خزنة رقمية وقائمة بأماكنك المفضلة.",
+    "nousContacter": "اتصل بنا",
+    "langues": "اللغات",
+    "politiqueDeConfidentialite": "سياسة الخصوصية",
+    "mentionsLegales": "قانوني",
+    "cgu": "CGU",
+    "consulterLaListe": "استشر القائمة",
+    "aidesAdministratives": "المساعدة الإدارية"
+  },
+  "comptesFormulaires": {
+    "vousAvezDejaUnCompte": "هل لديك حساب بالفعل؟",
+    "identifiant": "المعرف",
+    "adresseMail": "عنوان البريد الالكترونى",
+    "votreEmailOuIdentifiant": "بريدك الإلكتروني أو تسجيل الدخول",
+    "telephone": "هاتف",
+    "motDePasse": "كلمة المرور",
+    "motDePasseCaracteresPrompt": "يجب أن يحتوي على 8 أحرف مع حرف واحد كبير ورقم واحد",
+    "votreMotDePasse": "كلمة السر خاصتك",
+    "motDePasseOublie": "نسيت رقمك السري؟",
+    "pasEncoreDeCompte": "لا يوجد حساب بعد؟",
+    "champsRequis": "هذه الخانة مطلوبه",
+    "formatInvalide": "تنسيق غير صالح",
+    "jAiLuEtJaccepte": "لقد قرأت وقبلت شروط الاستخدام العامة"
+  }
 }
