--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -1,37 +1,43 @@
 {
-  "plus": "Plus",
-  "sansa": "sansa",
-  "SANSACestQuoi": "SANSA, what is it ?",
-  "sansaReferenceLesLieuxEtServices": "Sansa is the platform that references places and services useful to people in difficulty.",
-  "seConnecter": "Login",
-  "sInscrire": "Register",
-  "seDeconnecter": "Logout",
-  "nouvelleNote": "New note",
-  "coffreFortNumerique": "Digital safe",
-  "mesLieuxFavoris": "My favourite places",
-  "bonjourName": "Hello {{ name }} !",
-  "sesMissions": "Its missions",
-  "missionsPrompt1": "Referring all people in difficult situations to the structures that could help them.",
-  "missionsPrompt2": "To provide a tool that is open to all, ergonomic, simple and quick to use.",
-  "missionsPrompt3": "Provide access to a private space containing a digital safe and a list of your favourite places.",
-  "nousContacter": "Contact us",
-  "langues": "Languages",
-  "politiqueDeConfidentialite": "Privacy Policy",
-  "mentionsLegales": "Legal",
-  "cgu": "TCU",
-  "consulterLaListe": "Consult the list",
-  "aidesAdministratives": "Administrative assistance",
-  "jAiLuEtJaccepte": "I have read and accept the general conditions of use",
-  "vousAvezDejaUnCompte": "Do you already have an account?",
-  "identifiant": "Identifier",
-  "adresseMail": "Email Adress",
-  "telephone": "Phone",
-  "motDePasse": "Password",
-  "motDePasseCaracteresPrompt": "Must contain 8 characters with one capital letter and one number",
-  "votreEmailOuIdentifiant": "Your email or login",
-  "votreMotDePasse": "Your password",
-  "pasEncoreDeCompte": "No account yet?",
-  "champsRequis": "This field is required",
-  "formatInvalide": "Invalid format",
-  "motDePasseOublie": "Forgot your password?"
+  "common": {
+    "sansa": "sansa",
+    "seConnecter": "Login",
+    "sInscrire": "Register",
+    "seDeconnecter": "Logout"
+  },
+  "plus": {
+    "plus": "Plus",
+    "SANSACestQuoi": "SANSA, what is it ?",
+    "sansaReferenceLesLieuxEtServices": "Sansa is the platform that references places and services useful to people in difficulty.",
+    "nouvelleNote": "New note",
+    "coffreFortNumerique": "Digital safe",
+    "mesLieuxFavoris": "My favourite places",
+    "bonjourName": "Hello {{ name }} !",
+    "sesMissions": "Its missions",
+    "missionsPrompt1": "Referring all people in difficult situations to the structures that could help them.",
+    "missionsPrompt2": "To provide a tool that is open to all, ergonomic, simple and quick to use.",
+    "missionsPrompt3": "Provide access to a private space containing a digital safe and a list of your favourite places.",
+    "nousContacter": "Contact us",
+    "langues": "Languages",
+    "politiqueDeConfidentialite": "Privacy Policy",
+    "mentionsLegales": "Legal",
+    "cgu": "TCU",
+    "consulterLaListe": "Consult the list",
+    "aidesAdministratives": "Administrative assistance"
+  },
+  "comptesFormulaires": {
+    "jAiLuEtJaccepte": "I have read and accept the general conditions of use",
+    "vousAvezDejaUnCompte": "Do you already have an account?",
+    "identifiant": "Identifier",
+    "votreEmailOuIdentifiant": "Your email or login",
+    "adresseMail": "Email Adress",
+    "telephone": "Phone",
+    "motDePasse": "Password",
+    "motDePasseCaracteresPrompt": "Must contain 8 characters with one capital letter and one number",
+    "votreMotDePasse": "Your password",
+    "motDePasseOublie": "Forgot your password?",
+    "pasEncoreDeCompte": "No account yet?",
+    "champsRequis": "This field is required",
+    "formatInvalide": "Invalid format"
+  }
 }
