--- a/src/locales/languages/es.json
+++ b/src/locales/languages/es.json
@@ -1,37 +1,43 @@
 {
-  "plus": "Màs",
-  "sansa": "sansa",
-  "SANSACestQuoi": "Sansa, ¿qué es?",
-  "sansaReferenceLesLieuxEtServices": "Sansa es la plataforma que hace referencia a lugares y servicios útiles para las personas con dificultades.",
-  "seConnecter": "Inicio de sesión",
-  "sInscrire": "Registrar",
-  "seDeconnecter": "Desconexión",
-  "nouvelleNote": "Nueva nota",
-  "coffreFortNumerique": "Caja fuerte digital",
-  "mesLieuxFavoris": "Mis lugares favoritos",
-  "bonjourName": "Hola {{ name }} !",
-  "sesMissions": "Sus misiones",
-  "missionsPrompt1": "Remitir a todas las personas en situaciones difíciles a las estructuras que puedan ayudarlas.",
-  "missionsPrompt2": "Proporcionar una herramienta abierta a todos, ergonómica, sencilla y rápida de utilizar.",
-  "missionsPrompt3": "Una caja fuerte digital y una referencia de tus lugares favoritos.",
-  "nousContacter": "Contacto con nosotros",
-  "langues": "Lenguas",
-  "politiqueDeConfidentialite": "Política de privacidad",
-  "mentionsLegales": "Información jurídica",
-  "cgu": "CGU",
-  "consulterLaListe": "Ver la lista",
-  "aidesAdministratives": "Ayudas administrativas",
-  "jAiLuEtJaccepte": "He leído y acepto las condiciones generales de uso",
-  "vousAvezDejaUnCompte": "¿Ya tiene una cuenta?",
-  "identifiant": "Identificador",
-  "adresseMail": "Dirección de correo",
-  "telephone": "Teléfono",
-  "motDePasse": "Contraseña",
-  "motDePasseCaracteresPrompt": "Debe contener 8 caracteres con una letra mayúscula y un número",
-  "votreEmailOuIdentifiant": "Su correo electrónico o nombre de usuario",
-  "votreMotDePasse": "Su contraseña",
-  "pasEncoreDeCompte": "¿Aún no tiene cuenta?",
-  "champsRequis": "Este campo es obligatorio",
-  "formatInvalide": "Formato inválido",
-  "motDePasseOublie": "¿Ha olvidado su contraseña?"
+  "common": {
+    "sansa": "sansa",
+    "seConnecter": "Inicio de sesión",
+    "sInscrire": "Registrar",
+    "seDeconnecter": "Desconexión"
+  },
+  "plus": {
+    "plus": "Màs",
+    "SANSACestQuoi": "Sansa, ¿qué es?",
+    "sansaReferenceLesLieuxEtServices": "Sansa es la plataforma que hace referencia a lugares y servicios útiles para las personas con dificultades.",
+    "nouvelleNote": "Nueva nota",
+    "coffreFortNumerique": "Caja fuerte digital",
+    "mesLieuxFavoris": "Mis lugares favoritos",
+    "bonjourName": "Hola {{ name }} !",
+    "sesMissions": "Sus misiones",
+    "missionsPrompt1": "Remitir a todas las personas en situaciones difíciles a las estructuras que puedan ayudarlas.",
+    "missionsPrompt2": "Proporcionar una herramienta abierta a todos, ergonómica, sencilla y rápida de utilizar.",
+    "missionsPrompt3": "Una caja fuerte digital y una referencia de tus lugares favoritos.",
+    "nousContacter": "Contacto con nosotros",
+    "langues": "Lenguas",
+    "politiqueDeConfidentialite": "Política de privacidad",
+    "mentionsLegales": "Información jurídica",
+    "cgu": "CGU",
+    "consulterLaListe": "Ver la lista",
+    "aidesAdministratives": "Ayudas administrativas"
+  },
+  "comptesFormulaires": {
+    "jAiLuEtJaccepte": "He leído y acepto las condiciones generales de uso",
+    "vousAvezDejaUnCompte": "¿Ya tiene una cuenta?",
+    "identifiant": "Identificador",
+    "adresseMail": "Dirección de correo",
+    "telephone": "Teléfono",
+    "motDePasse": "Contraseña",
+    "motDePasseCaracteresPrompt": "Debe contener 8 caracteres con una letra mayúscula y un número",
+    "votreEmailOuIdentifiant": "Su correo electrónico o nombre de usuario",
+    "votreMotDePasse": "Su contraseña",
+    "pasEncoreDeCompte": "¿Aún no tiene cuenta?",
+    "champsRequis": "Este campo es obligatorio",
+    "formatInvalide": "Formato inválido",
+    "motDePasseOublie": "¿Ha olvidado su contraseña?"
+  }
 }
