--- a/src/locales/languages/fr.json
+++ b/src/locales/languages/fr.json
@@ -1,37 +1,43 @@
 {
-  "plus": "Plus",
-  "sansa": "sansa",
-  "SANSACestQuoi": "SANSA, c'est quoi ?",
-  "sansaReferenceLesLieuxEtServices": "Sansa c’est la plateforme qui référence les lieux et les services utiles aux personnes en difficultés.",
-  "seConnecter": "Se connecter",
-  "sInscrire": "S'inscrire",
-  "seDeconnecter": "Se déconnecter",
-  "nouvelleNote": "Nouvelle note",
-  "coffreFortNumerique": "Coffre-fort numérique",
-  "mesLieuxFavoris": "Mes lieux favoris",
-  "bonjourName": "Bonjour {{ name }} !",
-  "sesMissions": "Ses missions",
-  "missionsPrompt1": "Orienter toutes les personnes en situation difficile vers les structures qui pourraient les aider.",
-  "missionsPrompt2": "Mettre à disposition un outil ouvert à tous, ergonomique, simple et rapide d’utilisation.",
-  "missionsPrompt3": "Permettre l’accès à un espace privé contenant un coffre fort numérique et la liste de vos lieux favoris.",
-  "nousContacter": "Nous contacter",
-  "langues": "Langues",
-  "politiqueDeConfidentialite": "Politique de confidentialité",
-  "mentionsLegales": "Mentions légales",
-  "cgu": "CGU",
-  "consulterLaListe": "Consulter la liste",
-  "aidesAdministratives": "Aides administratives",
-  "jAiLuEtJaccepte": "J'ai lu et j'accepte les conditions générales d'utilisation",
-  "vousAvezDejaUnCompte": "Vous avez déjà un compte ?",
-  "identifiant": "Identifiant",
-  "adresseMail": "Adresse Mail",
-  "telephone": "Téléphone",
-  "motDePasse": "Mot de passe",
-  "motDePasseCaracteresPrompt": "Doit contenir 8 caractères avec une majuscule et un chiffre",
-  "votreEmailOuIdentifiant": "Votre email ou identifiant",
-  "votreMotDePasse": "Votre mot de passe",
-  "pasEncoreDeCompte": "Pas encore de compte ?",
-  "champsRequis": "Ce champs est requis",
-  "formatInvalide": "Format invalide",
-  "motDePasseOublie": "Mot de passe oublié"
+  "common": {
+    "sansa": "sansa",
+    "seConnecter": "Se connecter",
+    "sInscrire": "S'inscrire",
+    "seDeconnecter": "Se déconnecter"
+  },
+  "plus": {
+    "plus": "Plus",
+    "SANSACestQuoi": "SANSA, c'est quoi ?",
+    "sansaReferenceLesLieuxEtServices": "Sansa c’est la plateforme qui référence les lieux et les services utiles aux personnes en difficultés.",
+    "nouvelleNote": "Nouvelle note",
+    "coffreFortNumerique": "Coffre-fort numérique",
+    "mesLieuxFavoris": "Mes lieux favoris",
+    "bonjourName": "Bonjour {{ name }} !",
+    "sesMissions": "Ses missions",
+    "missionsPrompt1": "Orienter toutes les personnes en situation difficile vers les structures qui pourraient les aider.",
+    "missionsPrompt2": "Mettre à disposition un outil ouvert à tous, ergonomique, simple et rapide d’utilisation.",
+    "missionsPrompt3": "Permettre l’accès à un espace privé contenant un coffre fort numérique et la liste de vos lieux favoris.",
+    "nousContacter": "Nous contacter",
+    "langues": "Langues",
+    "politiqueDeConfidentialite": "Politique de confidentialité",
+    "mentionsLegales": "Mentions légales",
+    "cgu": "CGU",
+    "consulterLaListe": "Consulter la liste",
+    "aidesAdministratives": "Aides administratives"
+  },
+  "comptesFormulaires": {
+    "jAiLuEtJaccepte": "J'ai lu et j'accepte les conditions générales d'utilisation",
+    "vousAvezDejaUnCompte": "Vous avez déjà un compte ?",
+    "identifiant": "Identifiant",
+    "adresseMail": "Adresse Mail",
+    "telephone": "Téléphone",
+    "motDePasse": "Mot de passe",
+    "motDePasseCaracteresPrompt": "Doit contenir 8 caractères avec une majuscule et un chiffre",
+    "votreEmailOuIdentifiant": "Votre email ou identifiant",
+    "votreMotDePasse": "Votre mot de passe",
+    "pasEncoreDeCompte": "Pas encore de compte ?",
+    "champsRequis": "Ce champs est requis",
+    "formatInvalide": "Format invalide",
+    "motDePasseOublie": "Mot de passe oublié"
+  }
 }
