fix(languages): keys in english

--- a/src/locales/languages/ar.json
+++ b/src/locales/languages/ar.json
@@ -1,43 +1,43 @@
 {
   "common": {
     "sansa": "سانسا",
-    "sInscrire": "يسجل",
-    "seConnecter": "تسجيل الدخول",
-    "seDeconnecter": "تسجيل خروج"
+    "register": "يسجل",
+    "login": "تسجيل الدخول",
+    "logout": "تسجيل خروج"
   },
   "plus": {
     "plus": "أكثر",
-    "SANSACestQuoi": "سانسا ما هذا؟",
-    "sansaReferenceLesLieuxEtServices": "إنها المنصة التي تشير إلى الأماكن والخدمات المفيدة للأشخاص الذين يواجهون صعوبات.",
-    "nouvelleNote": "ملاحظة جديدة",
-    "coffreFortNumerique": "خزنة رقمية",
-    "mesLieuxFavoris": "أماكني المفضلة",
-    "bonjourName": "مرحبا {{ name }} !",
-    "sesMissions": "مهامها",
+    "whatIsSansa": "سانسا ما هذا؟",
+    "sansaDescription": "إنها المنصة التي تشير إلى الأماكن والخدمات المفيدة للأشخاص الذين يواجهون صعوبات.",
+    "newNote": "ملاحظة جديدة",
+    "digitalSafe": "خزنة رقمية",
+    "favouritePlaces": "أماكني المفضلة",
+    "helloWithName": "مرحبا {{ name }} !",
+    "itsMissions": "مهامها",
     "missionsPrompt1": "إحالة جميع الأشخاص في المواقف الصعبة إلى الهياكل التي يمكن أن تساعدهم.",
     "missionsPrompt2": "لتوفير أداة مفتوحة للجميع ومريحة وبسيطة وسريعة الاستخدام.",
     "missionsPrompt3": "وفر الوصول إلى مساحة خاصة تحتوي على خزنة رقمية وقائمة بأماكنك المفضلة.",
-    "nousContacter": "اتصل بنا",
-    "langues": "اللغات",
-    "politiqueDeConfidentialite": "سياسة الخصوصية",
-    "mentionsLegales": "قانوني",
-    "cgu": "CGU",
-    "consulterLaListe": "استشر القائمة",
-    "aidesAdministratives": "المساعدة الإدارية"
+    "contactUs": "اتصل بنا",
+    "languages": "اللغات",
+    "privacyPolicy": "سياسة الخصوصية",
+    "legals": "قانوني",
+    "tcu": "tcu",
+    "consultList": "استشر القائمة",
+    "administrativeAssistance": "المساعدة الإدارية"
   },
-  "comptesFormulaires": {
-    "vousAvezDejaUnCompte": "هل لديك حساب بالفعل؟",
-    "identifiant": "المعرف",
-    "adresseMail": "عنوان البريد الالكترونى",
-    "votreEmailOuIdentifiant": "بريدك الإلكتروني أو تسجيل الدخول",
-    "telephone": "هاتف",
-    "motDePasse": "كلمة المرور",
-    "motDePasseCaracteresPrompt": "يجب أن يحتوي على 8 أحرف مع حرف واحد كبير ورقم واحد",
-    "votreMotDePasse": "كلمة السر خاصتك",
-    "motDePasseOublie": "نسيت رقمك السري؟",
-    "pasEncoreDeCompte": "لا يوجد حساب بعد؟",
-    "champsRequis": "هذه الخانة مطلوبه",
-    "formatInvalide": "تنسيق غير صالح",
-    "jAiLuEtJaccepte": "لقد قرأت وقبلت شروط الاستخدام العامة"
+  "forms": {
+    "alreadyHaveAnAccount": "هل لديك حساب بالفعل؟",
+    "identifier": "المعرف",
+    "emailAdress": "عنوان البريد الالكترونى",
+    "emailOrIdentifier": "بريدك الإلكتروني أو تسجيل الدخول",
+    "phone": "هاتف",
+    "password": "كلمة المرور",
+    "passwordCharactersPrompt": "يجب أن يحتوي على 8 أحرف مع حرف واحد كبير ورقم واحد",
+    "yourPassword": "كلمة السر خاصتك",
+    "forgotPassword": "نسيت رقمك السري؟",
+    "noAccountYet": "لا يوجد حساب بعد؟",
+    "requiredField": "هذه الخانة مطلوبه",
+    "invalidFormat": "تنسيق غير صالح",
+    "iReadAndAcceptPrompt": "لقد قرأت وقبلت شروط الاستخدام العامة"
   }
 }
