--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -1,43 +1,43 @@
 {
   "common": {
     "sansa": "sansa",
-    "seConnecter": "увійти",
-    "sInscrire": "Реєстрація",
-    "seDeconnecter": "Вийти"
+    "login": "увійти",
+    "register": "Реєстрація",
+    "logout": "Вийти"
   },
   "plus": {
     "plus": "більше",
-    "SANSACestQuoi": "САНСА, що це?",
-    "sansaReferenceLesLieuxEtServices": "Санса — це платформа, яка посилається на місця та послуги, корисні для людей, які потрапили у труднощі.",
-    "nouvelleNote": "Нова замітка",
-    "coffreFortNumerique": "Цифровий сейф",
-    "mesLieuxFavoris": "Мої улюблені місця",
-    "bonjourName": "Привіт {{ name }} !",
-    "sesMissions": "Його місії",
+    "whatIsSansa": "САНСА, що це?",
+    "sansaDescription": "Санса — це платформа, яка посилається на місця та послуги, корисні для людей, які потрапили у труднощі.",
+    "newNote": "Нова замітка",
+    "digitalSafe": "Цифровий сейф",
+    "favouritePlaces": "Мої улюблені місця",
+    "helloWithName": "Привіт {{ name }} !",
+    "itsMissions": "Його місії",
     "missionsPrompt1": "Направлення всіх людей, які опинилися у складних ситуаціях, до структур, які могли б їм допомогти.",
     "missionsPrompt2": "Надати інструмент, відкритий для всіх, ергономічний, простий і швидкий у використанні.",
     "missionsPrompt3": "Надайте доступ до приватного простору, який містить цифровий сейф і список ваших улюблених місць.",
-    "nousContacter": "Зв'яжіться з нами",
-    "langues": "Мови",
-    "politiqueDeConfidentialite": "Політика конфіденційності",
-    "mentionsLegales": "Юридичний",
-    "cgu": "CGU",
-    "consulterLaListe": "Зверніться до списку",
-    "aidesAdministratives": "Адміністративна допомога"
+    "contactUs": "Зв'яжіться з нами",
+    "languages": "Мови",
+    "privacyPolicy": "Політика конфіденційності",
+    "legals": "Юридичний",
+    "tcu": "tcu",
+    "consultList": "Зверніться до списку",
+    "administrativeAssistance": "Адміністративна допомога"
   },
-  "comptesFormulaires": {
-    "jAiLuEtJaccepte": "Я прочитав і приймаю загальні умови використання",
-    "vousAvezDejaUnCompte": "У вас вже є обліковий запис?",
-    "identifiant": "Ідентифікатор",
-    "adresseMail": "Адреса електронної пошти",
-    "telephone": "Телефон",
-    "motDePasse": "Пароль",
-    "motDePasseCaracteresPrompt": "Повинен містити 8 символів з однією великою літерою та однією цифрою",
-    "votreEmailOuIdentifiant": "Ваша електронна пошта або логін",
-    "votreMotDePasse": "Ваш пароль",
-    "pasEncoreDeCompte": "Ще немає облікового запису?",
-    "champsRequis": "Це поле є обов'язковим",
-    "formatInvalide": "Недійсний формат",
-    "motDePasseOublie": "Забули свій пароль?"
+  "forms": {
+    "iReadAndAcceptPrompt": "Я прочитав і приймаю загальні умови використання",
+    "alreadyHaveAnAccount": "У вас вже є обліковий запис?",
+    "identifier": "Ідентифікатор",
+    "emailAdress": "Адреса електронної пошти",
+    "phone": "Телефон",
+    "password": "Пароль",
+    "passwordCharactersPrompt": "Повинен містити 8 символів з однією великою літерою та однією цифрою",
+    "emailOrIdentifier": "Ваша електронна пошта або логін",
+    "yourPassword": "Ваш пароль",
+    "noAccountYet": "Ще немає облікового запису?",
+    "requiredField": "Це поле є обов'язковим",
+    "invalidFormat": "Недійсний формат",
+    "forgotPassword": "Забули свій пароль?"
   }
 }
