--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -1,43 +1,43 @@
 {
   "common": {
     "sansa": "sansa",
-    "seConnecter": "Login",
-    "sInscrire": "Register",
-    "seDeconnecter": "Logout"
+    "login": "Login",
+    "register": "Register",
+    "logout": "Logout"
   },
   "plus": {
     "plus": "Plus",
-    "SANSACestQuoi": "SANSA, what is it ?",
-    "sansaReferenceLesLieuxEtServices": "Sansa is the platform that references places and services useful to people in difficulty.",
-    "nouvelleNote": "New note",
-    "coffreFortNumerique": "Digital safe",
-    "mesLieuxFavoris": "My favourite places",
-    "bonjourName": "Hello {{ name }} !",
-    "sesMissions": "Its missions",
+    "whatIsSansa": "SANSA, what is it ?",
+    "sansaDescription": "Sansa is the platform that references places and services useful to people in difficulty.",
+    "newNote": "New note",
+    "digitalSafe": "Digital safe",
+    "favouritePlaces": "My favourite places",
+    "helloWithName": "Hello {{ name }} !",
+    "itsMissions": "Its missions",
     "missionsPrompt1": "Referring all people in difficult situations to the structures that could help them.",
     "missionsPrompt2": "To provide a tool that is open to all, ergonomic, simple and quick to use.",
     "missionsPrompt3": "Provide access to a private space containing a digital safe and a list of your favourite places.",
-    "nousContacter": "Contact us",
-    "langues": "Languages",
-    "politiqueDeConfidentialite": "Privacy Policy",
-    "mentionsLegales": "Legal",
-    "cgu": "TCU",
-    "consulterLaListe": "Consult the list",
-    "aidesAdministratives": "Administrative assistance"
+    "contactUs": "Contact us",
+    "languages": "Languages",
+    "privacyPolicy": "Privacy Policy",
+    "legals": "Legals",
+    "tcu": "TCU",
+    "consultList": "Consult the list",
+    "administrativeAssistance": "Administrative assistance"
   },
-  "comptesFormulaires": {
-    "jAiLuEtJaccepte": "I have read and accept the general conditions of use",
-    "vousAvezDejaUnCompte": "Do you already have an account?",
-    "identifiant": "Identifier",
-    "votreEmailOuIdentifiant": "Your email or login",
-    "adresseMail": "Email Adress",
-    "telephone": "Phone",
-    "motDePasse": "Password",
-    "motDePasseCaracteresPrompt": "Must contain 8 characters with one capital letter and one number",
-    "votreMotDePasse": "Your password",
-    "motDePasseOublie": "Forgot your password?",
-    "pasEncoreDeCompte": "No account yet?",
-    "champsRequis": "This field is required",
-    "formatInvalide": "Invalid format"
+  "forms": {
+    "iReadAndAcceptPrompt": "I have read and accept the general conditions of use",
+    "alreadyHaveAnAccount": "Do you already have an account?",
+    "identifier": "Identifier",
+    "emailOrIdentifier": "Your email or login",
+    "emailAdress": "Email Adress",
+    "phone": "Phone",
+    "password": "Password",
+    "passwordCharactersPrompt": "Must contain 8 characters with one capital letter and one number",
+    "yourPassword": "Your password",
+    "forgotPassword": "Forgot your password?",
+    "noAccountYet": "No account yet?",
+    "requiredField": "This field is required",
+    "invalidFormat": "Invalid format"
   }
 }
