--- a/src/locales/languages/es.json
+++ b/src/locales/languages/es.json
@@ -1,43 +1,43 @@
 {
   "common": {
     "sansa": "sansa",
-    "seConnecter": "Inicio de sesión",
-    "sInscrire": "Registrar",
-    "seDeconnecter": "Desconexión"
+    "login": "Inicio de sesión",
+    "register": "Registrar",
+    "logout": "Desconexión"
   },
   "plus": {
     "plus": "Màs",
-    "SANSACestQuoi": "Sansa, ¿qué es?",
-    "sansaReferenceLesLieuxEtServices": "Sansa es la plataforma que hace referencia a lugares y servicios útiles para las personas con dificultades.",
-    "nouvelleNote": "Nueva nota",
-    "coffreFortNumerique": "Caja fuerte digital",
-    "mesLieuxFavoris": "Mis lugares favoritos",
-    "bonjourName": "Hola {{ name }} !",
-    "sesMissions": "Sus misiones",
+    "whatIsSansa": "Sansa, ¿qué es?",
+    "sansaDescription": "Sansa es la plataforma que hace referencia a lugares y servicios útiles para las personas con dificultades.",
+    "newNote": "Nueva nota",
+    "digitalSafe": "Caja fuerte digital",
+    "favouritePlaces": "Mis lugares favoritos",
+    "helloWithName": "Hola {{ name }} !",
+    "itsMissions": "Sus misiones",
     "missionsPrompt1": "Remitir a todas las personas en situaciones difíciles a las estructuras que puedan ayudarlas.",
     "missionsPrompt2": "Proporcionar una herramienta abierta a todos, ergonómica, sencilla y rápida de utilizar.",
     "missionsPrompt3": "Una caja fuerte digital y una referencia de tus lugares favoritos.",
-    "nousContacter": "Contacto con nosotros",
-    "langues": "Lenguas",
-    "politiqueDeConfidentialite": "Política de privacidad",
-    "mentionsLegales": "Información jurídica",
-    "cgu": "CGU",
-    "consulterLaListe": "Ver la lista",
-    "aidesAdministratives": "Ayudas administrativas"
+    "contactUs": "Contacto con nosotros",
+    "languages": "Lenguas",
+    "privacyPolicy": "Política de privacidad",
+    "legals": "Información jurídica",
+    "tcu": "tcu",
+    "consultList": "Ver la lista",
+    "administrativeAssistance": "Ayudas administrativas"
   },
-  "comptesFormulaires": {
-    "jAiLuEtJaccepte": "He leído y acepto las condiciones generales de uso",
-    "vousAvezDejaUnCompte": "¿Ya tiene una cuenta?",
-    "identifiant": "Identificador",
-    "adresseMail": "Dirección de correo",
-    "telephone": "Teléfono",
-    "motDePasse": "Contraseña",
-    "motDePasseCaracteresPrompt": "Debe contener 8 caracteres con una letra mayúscula y un número",
-    "votreEmailOuIdentifiant": "Su correo electrónico o nombre de usuario",
-    "votreMotDePasse": "Su contraseña",
-    "pasEncoreDeCompte": "¿Aún no tiene cuenta?",
-    "champsRequis": "Este campo es obligatorio",
-    "formatInvalide": "Formato inválido",
-    "motDePasseOublie": "¿Ha olvidado su contraseña?"
+  "forms": {
+    "iReadAndAcceptPrompt": "He leído y acepto las condiciones generales de uso",
+    "alreadyHaveAnAccount": "¿Ya tiene una cuenta?",
+    "identifier": "Identificador",
+    "emailAdress": "Dirección de correo",
+    "phone": "Teléfono",
+    "password": "Contraseña",
+    "passwordCharactersPrompt": "Debe contener 8 caracteres con una letra mayúscula y un número",
+    "emailOrIdentifier": "Su correo electrónico o nombre de usuario",
+    "yourPassword": "Su contraseña",
+    "noAccountYet": "¿Aún no tiene cuenta?",
+    "requiredField": "Este campo es obligatorio",
+    "invalidFormat": "Formato inválido",
+    "forgotPassword": "¿Ha olvidado su contraseña?"
   }
 }
