feat(Search): change map padding for bornes

--- a/src/locales/languages/ar.json
+++ b/src/locales/languages/ar.json
@@ -126,7 +126,9 @@
       "Insertion par l'activité économique": "التكامل من خلال النشاط الاقتصادي",
       "Boutique solidaire": "متجر التضامن",
       "Bagagerie": "الامتعه", 
-      "Restauration assise": "ترميم المقاعد"
+      "Restauration assise": "ترميم المقاعد",
+      "Coffre-fort numérique" : "خزنة رقمية",
+      "Activités diverses": "أنشطة متنوعة"
     }
   },
   "home": {
