--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -125,7 +125,9 @@
       "Insertion par l'activité économique": "Integration through economic activity",
       "Boutique solidaire": "Solidarity shop",
       "Bagagerie": "Solidarity shop",
-      "Restauration assise": "Seated restoration"
+      "Restauration assise": "Seated restoration",
+      "Coffre-fort numérique" : "Digital Safe",
+      "Activités diverses": "Miscellaneous activities"
     }
   },
   "home": {
