--- a/src/locales/languages/es.json
+++ b/src/locales/languages/es.json
@@ -126,7 +126,9 @@
       "Insertion par l'activité économique": "Integración a través de la actividad económica",
       "Boutique solidaire": "Tienda solidaria",
       "Bagagerie": "Equipaje", 
-      "Restauration assise": "Restauración sentada"
+      "Restauration assise": "Restauración sentada",
+      "Coffre-fort numérique" : "Caja fuerte digital",
+      "Activités diverses": "Actividades diversas"
     }
   },
   "home": {
