--- a/src/locales/languages/fr.json
+++ b/src/locales/languages/fr.json
@@ -126,7 +126,10 @@
       "Insertion par l'activité économique": "Insertion par l'activité économique",
       "Boutique solidaire": "Boutique solidaire",
       "Bagagerie": "Bagagerie", 
-      "Restauration assise": "Restauration assise"
+      "Restauration assise": "Restauration assise",
+      "Coffre-fort numérique" : "Coffre-fort numérique",
+      "Activités diverses": "Activités diverses"
+      
     }
   },
   "home": {
