--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -126,7 +126,9 @@
       "Insertion par l'activité économique": "Інтеграція через економічну діяльність",
       "Boutique solidaire": "Магазин солідарності",
       "Bagagerie": "Багаж", 
-      "Restauration assise": "Сидяча реставрація"
+      "Restauration assise": "Сидяча реставрація",
+      "Coffre-fort numérique" : "Цифровий сейф",
+      "Activités diverses": "Різне"
     }
   },
   "home": {
