feat(Search): add by_appointment and preferencialWelcomes keys

--- a/src/locales/languages/ar.json
+++ b/src/locales/languages/ar.json
@@ -75,6 +75,7 @@
     "learnMore": "التعرف على المزيد",
     "seeMore": "شاهد المزيد",
     "lastUpdate": "آخر تحديث",
+    "byAppointement": "عن طريق التعيين",
     "services" : {
       "Acceuil": "استقبال",
       "Alimentation": "إطعام",
