--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -74,6 +74,7 @@
     "learnMore": "Learn more",
     "seeMore": "See more",
     "lastUpdate": "Last update",
+    "byAppointement": "By appointment",
     "services" : {
       "Acceuil": "Home",
       "Alimentation": "Feeding",
