--- a/src/locales/languages/es.json
+++ b/src/locales/languages/es.json
@@ -75,6 +75,7 @@
     "learnMore": "Aprende más",
     "seeMore": "Ver más",
     "lastUpdate": "Última actualización",
+    "byAppointement": "Con cita previa",
     "services" : {
       "Acceuil": "Recepción",
       "Alimentation": "Alimentación",
