--- a/src/locales/languages/fr.json
+++ b/src/locales/languages/fr.json
@@ -75,6 +75,7 @@
     "learnMore": "En savoir plus",
     "seeMore": "Voir plus",
     "lastUpdate": "Dernière mise à jour",
+    "byAppointement": "Sur rendez-vous",
     "services" : {
       "Acceuil": "Accueil",
       "Alimentation": "Alimentation",
