--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -75,6 +75,7 @@
     "learnMore": "Дізнатися більше",
     "seeMore": "Детальніше",
     "lastUpdate": "Останнє оновлення",
+    "byAppointement": "За призначенням",
     "services" : {
       "Acceuil": "Прийом",
       "Alimentation": "Годування",
